--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Верстка приемлемого макета</title>
+    <link rel="stylesheet" href="./src/scss/style.scss">
   </head>
   <body>
     <header class="header">
