--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Верстка приемлемого макета</title>
-    <link rel="stylesheet" href="./src/scss/style.scss">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="header">
       <div class="header__left">
         <button class="header__button header__button--menu"></button>
-        <a href="#" class="header__logo"><img src="./img/logo.svg" alt="Логотип"></a>
+        <a href="#" class="header__logo"><img src="./src/img/logo.svg" alt="Логотип"></a>
       </div>
       <div class="header__right">
         <button class="header__button header__button--call header__button--hidden"></button>
