--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,12 @@
     <div class="modal-feedback modal-feedback__visibility">
       <div class="modal-feedback__content">
         <button class="menu__button modal-feedback__out"></button>
-        <h2 class="modal-feedback__title">Заказать звонок</h2>
+        <h2 class="modal-feedback__title">Обратная связь</h2>
         <form action="">
-        <input type="text" class="modal-feedback__input" value="Телефон"> 
+        <input type="text" class="modal-feedback__input" value="Имя"> 
+        <input type="text" class="modal-feedback__input" value="Телефон">
+        <input type="text" class="modal-feedback__input" value="Электронная почта">
+        <textarea class="modal-feedback__input modal-feedback__input--message">Сообщение</textarea>
         <p class="modal-feedback__text">
           Нажимая “отправить”, вы даете согласие на <span class="modal-feedback__red-text">обработку персональных данных</span> и соглашаетесь с нашей <span class="modal-feedbackl__red-text">политикой конфиденциальности</span>
         </p>
